--- a/MuaClient/MuaClient.vcxproj.filters
+++ b/MuaClient/MuaClient.vcxproj.filters
@@ -99,6 +99,12 @@
     <ClCompile Include="AntiDebug.cpp">
       <Filter>源文件\Protect</Filter>
     </ClCompile>
+    <ClCompile Include="BypassUAC.cpp">
+      <Filter>源文件\Protect</Filter>
+    </ClCompile>
+    <ClCompile Include="SystemService.cpp">
+      <Filter>源文件\Protect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -162,6 +168,12 @@
       <Filter>头文件\Protect</Filter>
     </ClInclude>
     <ClInclude Include="AntiDebug.h">
+      <Filter>头文件\Protect</Filter>
+    </ClInclude>
+    <ClInclude Include="BypassUAC.h">
+      <Filter>头文件\Protect</Filter>
+    </ClInclude>
+    <ClInclude Include="SystemService.h">
       <Filter>头文件\Protect</Filter>
     </ClInclude>
   </ItemGroup>
