--- a/SystemService/SystemService.vcxproj.filters
+++ b/SystemService/SystemService.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Starter.cpp">
+    <ClCompile Include="SystemService.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
