--- a/MuaServer/MuaServer.vcxproj.filters
+++ b/MuaServer/MuaServer.vcxproj.filters
@@ -45,12 +45,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MFCApplication4.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="MFCApplication4Dlg.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="Misc.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -116,6 +110,12 @@
     </ClInclude>
     <ClInclude Include="ModuleFileTransfer.h">
       <Filter>头文件\组件-文件传输</Filter>
+    </ClInclude>
+    <ClInclude Include="MuaServerDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="MuaServer.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
