之前改文件夹名，把.gitignore中设置的删除目录下的dll给搞没了，现在重新传dll。以及修复图标

--- a/.gitignore
+++ b/.gitignore
@@ -262,5 +262,5 @@ __pycache__/
 
 
 # I need these dll
-!MFCApplication4/HPSocket/x64
-!MFCApplication4/HPSocket/x86
+!MuaServer/HPSocket/x64
+!MuaServer/HPSocket/x86
